# rust_lsp

./: .gitignore  AGENT.md  COMPLETE_PERFORMANCE_ANALYSIS.md  Cargo.toml  IPC-2581B.xsd  IPC-2581B1.xsd  README.md  build-webview.mjs  dev-server.mjs  kill-all.ps1  package-lock.json  package.json  rebuild-all.ps1  trigger_load.mjs  tsconfig.extension.json
.github/: copilot-instructions.md
.github/agents/: L1.agent.md
IPC2581C specification docs/: Appendix_A_Panel_Instance_File.md  Appendix_B_Potential_Reference_Designator_Assignment_for_Non_Electrical_Items.md  Appendix_C_Summary_of_Changes_from_Revision_B_Am1.md
IPC2581C specification docs/10_GLOSSARY/: 10.1_Process_Flow_Descriptions.md  10.2_Terms_and_Definitions.md  10.3_Enumerated_strings_of_IPC2581.md
assets/: webview.html
output/: 48V-24V Buck Converter_serialized.xml  pic_programmerB_serialized.xml  pic_programmerC_serialized.xml
src/: extension.ts  lib.rs  parse_xml.rs  serialize_xml.rs  xml_draw.rs  xml_to_sqlite.rs
tests/: 48V-24V Buck Converter.xml  arm_test.rs  buck_converter_test.rs  led_matrix_test.rs  nex40400_pcb_site1_wirebound_test.rs  nex40400_probecard_pcb_test.rs  nex40400_probecard_test.rs  pic_programmerB.xml  pic_programmerC.xml  pic_programmer_b_test.rs  pic_programmer_c_test.rs  serialization_performance_test.rs  teres_pcb1_a64_main_test.rs  test_line_descriptors.rs  tinytapeout_demo_test.rs
tools/: compare_tessellation_logs.py  print_drc_violations.mjs  test_drc.mjs
webview/: TEST_README.md  index.html  package-lock.json  package.json  test.html  tsconfig.json  vite.config.ts
(+348 files in other folders)
