[package]
name = "rust_extension"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = "0.31"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1.0"
indexmap = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"
earcutr = "0.4"
base64 = "0.21"
rayon = "1.11.0"

[lib]
name = "rust_extension"
path = "src/lib.rs"

[[bin]]
name = "lsp_server"
path = "src/bin/lsp_server.rs"
